<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hash.gossipgirl.activity.Register">

    <EditText
        android:id="@+id/password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/email2"
        android:layout_alignStart="@+id/email2"
        android:layout_below="@+id/email2"
        android:layout_marginTop="13dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password2"
        android:layout_alignLeft="@+id/email2"
        android:layout_alignStart="@+id/email2"
        android:layout_marginBottom="46dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/finalcreateaccount"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/password2"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/create_an_account_button"
        android:fontFamily="monospace"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/finalcreateaccount"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@id/finalcreateaccount"
        android:layout_marginTop="101dp"
        android:background="@android:drawable/editbox_background_normal"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColorHint="@android:color/darker_gray"
        tools:ignore="UnknownId" />

</RelativeLayout>
