<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hash.gossipgirl.activity.Login"
    android:theme="@style/AppTheme"
    android:elevation="0dp">

    <Button
        android:text="@string/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginTop="29dp"
        android:layout_marginRight="37dp"
        android:layout_marginEnd="37dp"
        android:layout_below="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password"
        android:textAllCaps="false"
        android:onClick="login_click"/>

    <Button
        android:text="@string/create_an_account"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:id="@+id/createaccount"
        android:background="@drawable/create_an_account_button"
        android:textColor="@android:color/background_light"
        android:textAllCaps="false"
        style="@style/Widget.AppCompat.Button.Colored"
        android:fontFamily="monospace"
        android:layout_below="@+id/login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="13dp"
        android:id="@+id/password"
        android:hint="@string/password"
        android:textColorHint="@android:color/darker_gray"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/darker_gray"
        android:background="@android:drawable/editbox_background_normal"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email" />

    <EditText
        android:layout_width="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_height="wrap_content"
        android:layout_marginTop="101dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColorHint="@android:color/darker_gray"
        android:background="@android:drawable/editbox_background_normal"
        tools:ignore="UnknownId"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:hint="@string/email_address"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/createaccount"
        android:layout_alignStart="@+id/createaccount" />

    <Button
        android:text="Go to Main Page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:id="@+id/welcome"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textAllCaps="false"
        android:layout_below="@+id/createaccount"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password" />


</RelativeLayout>
